--- a/src/components/general/NavBar/NavBar.css
+++ b/src/components/general/NavBar/NavBar.css
@@ -9,6 +9,9 @@
     -webkit-backdrop-filter: blur(20px);
     border: none;
 }
-.glass-back {
-
+.nav-avatar {
+    height: 80%;
+    border-radius: 50%;
+    border: 5px solid white;
+    
 }
